@@ -13,6 +13,8 @@ dillo-3.0.4 [not released yet]
    Patch: corvid
 +- Make embedding into other applications more reliable (BUG#1127).
    Patch: Johannes Hofmann
++- Better scaling (down) of images
+   Patch: Sebastian Geerken
 
 -----------------------------------------------------------------------------
 
